# LearnVulkan

./: .gitignore  CMakeLists.txt  README.md
Debug/: imgui.lib
Debug/assets/shaders/: simple_shader.frag  simple_shader.vert
assets/shaders/: compile.bat  simple_shader.frag  simple_shader.vert
src/: display_window.cpp  display_window.hpp  first_app.cpp  first_app.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_window.cpp  lve_window.hpp  main.cpp  pipeline.cpp  pipeline.hpp
src/core/: Component.hpp  CoreInstance.cpp  CoreInstance.hpp  DisplayWindow.cpp  DisplayWindow.hpp  GameObject.cpp  GameObject.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  Model.cpp  Model.hpp  SwapChain.cpp  SwapChain.hpp  TransformObject.cpp  TransformObject.hpp  UiManager.cpp  UiManager.hpp  config.hpp
src/render/: Renderer.cpp  Renderer.hpp
src/utli/: helper_functions.hpp  structure.hpp
